Radio buttons responsive and fixed container overflow x

--- a/src/app/pages/home/home.component.less
+++ b/src/app/pages/home/home.component.less
@@ -7,3 +7,28 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.direction-radio-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.sobo-button {
+  margin-top: 0.5rem;
+}
+
+#home-timeline-container {
+  overflow: auto;
+}
+
+@media (min-width: 450px) {
+  .direction-radio-group {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .sobo-button {
+    margin-left: 1rem;
+    margin-top: 0;
+  }
+}
